NXP-5448: Add Selenium test

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -14,6 +14,9 @@
   <tr>
     <td><a href="fullTextSearch.html">fullTextSearch</a></td>
   </tr>
+  <tr>
+    <td><a href="dateRangeSearch.html">dateRangeSearch</a></td>
+  </tr>
 
   </tbody>
 </table>
