--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
@@ -7,6 +7,8 @@
 
   <ui:include src="/facetedsearch/faceted_searches_selector.xhtml" />
 
+  <ui:include src="/facetedsearch/saved_faceted_searches_selector.xhtml" />
+
   <h:form id="facetedSearchForm">
 
     <ui:include src="/facetedsearch/faceted_search_actions_bar.xhtml">
