--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -17,6 +17,9 @@
   <tr>
     <td><a href="dateRangeSearch.html">dateRangeSearch</a></td>
   </tr>
+  <tr>
+    <td><a href="saveSearch.html">saveSearch</a></td>
+  </tr>
 
   </tbody>
 </table>
