--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/save_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/save_search_form.xhtml
@@ -3,7 +3,7 @@
 
   <p><h:outputText value="#{messages['label.save.search.description1']}" /></p>
   <p><h:outputText value="#{messages['label.save.search.description2']}" /></p>
-  <h:inputText value="#{facetedSearchActions.savedSearchTitle}"/>
+  <h:inputText id="savedSearchTitle" value="#{facetedSearchActions.savedSearchTitle}"/>
   <h:commandButton type="submit" class="button"
                    value="#{messages['command.save']}"
                    action="#{facetedSearchActions.saveSearch}"/>
