NXP-5501: Add a Widget and WidgetType to perform an users search

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -20,6 +20,9 @@
   <tr>
     <td><a href="saveSearch.html">saveSearch</a></td>
   </tr>
+  <tr>
+    <td><a href="authorSearch.html">authorSearch</a></td>
+  </tr>
 
   </tbody>
 </table>
