NXP-5509: add wrapper widget to be able to regroup widgets

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
@@ -69,7 +69,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
@@ -100,7 +100,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
