--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -68,32 +68,32 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created:nxw_dc_created_to</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_to</td>
 	<td>${currentMonth}/${currentDay}/${currentYear}</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>This folder contains no document.</td>
+	<td>No documents match your search criteria</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created:nxw_dc_created_from</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
 	<td>${currentMonth}/${currentDay}/${currentYear}</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created:nxw_dc_created_to</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_to</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
@@ -118,7 +118,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_created:nxw_dc_created_from</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
 	<td></td>
 </tr>
 <tr>
@@ -128,32 +128,32 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified:nxw_dc_modified_to</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_to</td>
 	<td>${currentMonth}/${currentDay}/${currentYear}</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>This folder contains no document.</td>
+	<td>No documents match your search criteria</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified:nxw_dc_modified_from</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_from</td>
 	<td>${currentMonth}/${currentDay}/${currentYear}</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_modified:nxw_dc_modified_to</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_to</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
@@ -178,12 +178,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
 	<td>Sections</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
