--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -64,12 +64,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
 	<td>Sections</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=id('facetedSearchForm')/x:div[2]/x:input[1]</td>
+	<td>//input[@value='Go!']</td>
 	<td></td>
 </tr>
 <tr>
@@ -105,7 +105,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Your search has been saved</td>
+	<td>Your search has been saved in your personal workspace</td>
 	<td></td>
 </tr>
 
@@ -142,7 +142,7 @@
 </tr>
 <tr>
 	<td>verifyValue</td>
-	<td>//*[@id='facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext']</td>
+	<td>//*[@id='facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1']</td>
 	<td>Sections</td>
 </tr>
 <tr>
