--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
@@ -17,7 +17,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>open</td>
+  <td>open</td>
 	<td>logout</td>
 	<td></td>
 </tr>
@@ -64,7 +64,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
 	<td>Sections</td>
 </tr>
 <tr>
@@ -95,7 +95,7 @@
 
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
 	<td>no match</td>
 </tr>
 <tr>
@@ -110,7 +110,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>This folder contains no document.</td>
+	<td>No documents match your search criteria</td>
 	<td></td>
 </tr>
 
