--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -146,7 +146,7 @@
 <!-- load the search -->
 <tr>
   <td>selectAndWait</td>
-  <td>//select[@id="savedFacetedSearchSelectorForm:savedFacetedSearchSelector"]
+  <td>//select[@id="facetedSearchForm:nxl_faceted_search_default:savedFacetedSearchSelector"]
   </td>
   <td>label=My search</td>
 </tr>
