--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
@@ -1,8 +1,8 @@
-<h:form xmlns:h="http://java.sun.com/jsf/html"
+<div xmlns:h="http://java.sun.com/jsf/html"
         xmlns:nxu="http://nuxeo.org/nxweb/util"
         xmlns:c="http://java.sun.com/jstl/core"
         xmlns:f="http://java.sun.com/jsf/core"
-        id="facetedSearchSelectorForm">
+        id="facetedSearchSelectorDiv">
 
   <p><h:outputText value="#{messages['label.faceted.searches']}" /></p>
   <h:selectOneMenu
@@ -24,4 +24,4 @@
   <div style="display: none;">
     <h:commandButton value="submit"/>
   </div>
-</h:form>
+</div>
