--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
@@ -1,8 +1,10 @@
 <div xmlns:h="http://java.sun.com/jsf/html"
         xmlns:nxu="http://nuxeo.org/nxweb/util"
         xmlns:c="http://java.sun.com/jstl/core"
-        xmlns:f="http://java.sun.com/jsf/core"
-        id="facetedSearchSelectorDiv">
+        xmlns:f="http://java.sun.com/jsf/core">
+
+  <nxu:set var="displaySelector" value="#{facetedSearchActions.contentViewNames.size > 1}">
+  <c:if test="${hasSpecificFields}">
 
   <p><h:outputText value="#{messages['label.faceted.searches']}" /></p>
   <h:selectOneMenu
@@ -24,4 +26,7 @@
   <div style="display: none;">
     <h:commandButton value="submit"/>
   </div>
+
+  </c:if>
+  </nxu:set>
 </div>
