--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/date_range_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/date_range_widget_template.xhtml
@@ -5,31 +5,47 @@
   id="#{widget.id}">
 
   <c:if test="#{widget.mode != 'create' and widget.mode != 'edit'}">
-    <h:outputText value="#{messages['label.search.between']} " />
+    <div>
+      <span class="wideLabel">
+        <h:outputText value="#{messages['label.search.between']} " />
+      </span>
+  
+      <h:outputText value="#{field_0}">
+        <f:convertDateTime type="date" pattern="#{nxu:basicDateFormater()}" />
+      </h:outputText>
+    </div>
 
-    <h:outputText value="#{field_0}">
-      <f:convertDateTime type="date" pattern="#{nxu:basicDateFormater()}" />
-    </h:outputText>
-
-    <h:outputText value=" #{messages['label.search.and']} " />
-
-    <h:outputText value="#{field_1}">
-      <f:convertDateTime type="date" pattern="#{nxu:basicDateFormater()}" />
-    </h:outputText>
+    <div>
+      <span class="wideLabel">
+        <h:outputText value="#{messages['label.search.and']} " />
+      </span>
+  
+      <h:outputText value="#{field_1}">
+        <f:convertDateTime type="date" pattern="#{nxu:basicDateFormater()}" />
+      </h:outputText>
+    </div>
   </c:if>
 
   <c:if test="#{widget.mode == 'create' or widget.mode == 'edit'}">
-    <h:outputText value="#{messages['label.search.between']} " />
+    <div>
+      <span class="wideLabel">
+        <h:outputText value="#{messages['label.search.between']} " />
+      </span>
 
-    <nxu:inputDateTime value="#{field_0}" id="#{widget.id}_from" styleClass="#{widget.properties['styleClass']}"
-      required="#{widget.properties['required']}" showsTime="true" format="#{nxu:basicDateFormater()}" />
-    <h:message styleClass="errorMessage" for="#{widget.id}_from" id="#{widget.id}_message_from" />
+      <nxu:inputDateTime value="#{field_0}" id="#{widget.id}_from" styleClass="#{widget.properties['styleClass']}"
+        required="#{widget.properties['required']}" showsTime="true" format="#{nxu:basicDateFormater()}" />
+      <h:message styleClass="errorMessage" for="#{widget.id}_from" id="#{widget.id}_message_from" />
+    </div>
 
-    <h:outputText value=" #{messages['label.search.and']} " />
-
-    <nxu:inputDateTime value="#{field_1}" id="#{widget.id}_to" styleClass="#{widget.properties['styleClass']}"
-      required="#{widget.properties['required']}" showsTime="true" format="#{nxu:basicDateFormater()}" />
-    <h:message styleClass="errorMessage" for="#{widget.id}_to" id="#{widget.id}_message_to" />
+    <div>
+      <span class="wideLabel">
+        <h:outputText value="#{messages['label.search.and']} " />
+      </span>
+  
+      <nxu:inputDateTime value="#{field_1}" id="#{widget.id}_to" styleClass="#{widget.properties['styleClass']}"
+        required="#{widget.properties['required']}" showsTime="true" format="#{nxu:basicDateFormater()}" />
+      <h:message styleClass="errorMessage" for="#{widget.id}_to" id="#{widget.id}_message_to" />
+    </div>
   </c:if>
 
 </f:subview>
