--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_wrapper_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_wrapper_widget_template.xhtml
@@ -20,27 +20,31 @@
             <c:if test="#{mode == 'simple'}">
               <c:choose>
                 <c:when test="#{widget.translated}">
-                  <td class="iconColumn" style="vertical-align:top;">
-                    <c:if test="#{!empty widget.helpLabel}">
-                      <h:graphicImage value="/icons/lightbulb.png"
-                                      onmouseover="tooltip.show('#{messages[widget.helpLabel]}', 500);"
-                                      onmouseout="tooltip.hide();"/>
-                    </c:if>
-                  </td>
                   <td class="labelColumn">
-                    <h:outputText value="#{messages[widget.label]}"/>
+                    <c:if test="#{!empty widget.helpLabel}">
+                      <span onmouseover="tooltip.show('#{messages[widget.helpLabel]}', 500);" onmouseout="tooltip.hide();">
+                        <h:outputText value="#{messages[widget.label]}"/>
+                      </span>
+                    </c:if>
+                    <c:if test="#{empty widget.helpLabel}">
+                      <span>
+                        <h:outputText value="#{messages[widget.label]}"/>
+                      </span>
+                    </c:if>
                   </td>
                 </c:when>
                 <c:otherwise>
-                  <td class="iconColumn" style="vertical-align:top;">
-                    <c:if test="#{!empty widget.helpLabel}">
-                      <h:graphicImage value="/icons/lightbulb.png"
-                                      onmouseover="tooltip.show('#{widget.helpLabel}', 500);"
-                                      onmouseout="tooltip.hide();"/>
-                    </c:if>
-                  </td>
                   <td class="labelColumn">
-                    <h:outputText value="#{widget.label}"/>
+                    <c:if test="#{!empty widget.helpLabel}">
+                      <span onmouseover="tooltip.show('#{widget.helpLabel}', 500);" onmouseout="tooltip.hide();">
+                        <h:outputText value="#{widget.label}"/>
+                      </span>
+                    </c:if>
+                    <c:if test="#{empty widget.helpLabel}">
+                      <span>
+                        <h:outputText value="#{widget.label}"/>
+                      </span>
+                    </c:if>
                   </td>
                 </c:otherwise>
               </c:choose>
@@ -53,34 +57,37 @@
                 <c:choose>
                   <c:when test="#{widget.translated}">
                     <div>
-                <span class="iconColumn" style="vertical-align:top;">
-                  <c:if test="#{!empty widget.helpLabel}">
-                    <h:graphicImage value="/icons/lightbulb.png"
-                                    onmouseover="tooltip.show('#{messages[widget.helpLabel]}', 500);"
-                                    onmouseout="tooltip.hide();"/>
-                  </c:if>
-                </span>
-                <span class="labelColumn">
-                  <h:outputText value="#{messages[widget.label]}"/>
-                </span>
+                      <h6>
+                        <c:if test="#{!empty widget.helpLabel}">
+                          <span onmouseover="tooltip.show('#{messages[widget.helpLabel]}', 500);" onmouseout="tooltip.hide();">
+                            <h:outputText value="#{messages[widget.label]}"/>
+                          </span>
+                        </c:if>
+                        <c:if test="#{empty widget.helpLabel}">
+                          <span>
+                            <h:outputText value="#{messages[widget.label]}"/>
+                          </span>
+                        </c:if>
+                      </h6>
                     </div>
                   </c:when>
                   <c:otherwise>
                     <div>
-                <span class="iconColumn" style="vertical-align:top;">
-                  <c:if test="#{!empty widget.helpLabel}">
-                    <h:graphicImage value="/icons/lightbulb.png"
-                                    onmouseover="tooltip.show('#{widget.helpLabel}', 500);"
-                                    onmouseout="tooltip.hide();"/>
-                  </c:if>
-                </span>
-                <span class="labelColumn">
-                  <h:outputText value="#{widget.label}"/>
-                </span>
+                      <h6>
+                        <c:if test="#{!empty widget.helpLabel}">
+                          <span onmouseover="tooltip.show('#{widget.helpLabel}', 500);" onmouseout="tooltip.hide();">
+                            <h:outputText value="#{widget.label}"/>
+                          </span>
+                        </c:if>
+                        <c:if test="#{empty widget.helpLabel}">
+                          <span>
+                            <h:outputText value="#{widget.label}"/>
+                          </span>
+                        </c:if>
+                      </h6>
                     </div>
                   </c:otherwise>
                 </c:choose>
-
                 <div>
                   <nxl:widget widget="#{widget}" value="#{value}"/>
                 </div>
