--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -105,7 +105,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value='Go!']</td>
+    <td>//input[@value="Go!"]</td>
     <td></td>
   </tr>
   <tr>
