--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
@@ -79,7 +79,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value='Go!']</td>
+    <td>//input[@value="Go!"]</td>
     <td></td>
   </tr>
   <tr>
@@ -112,7 +112,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value='Go!']</td>
+    <td>//input[@value="Go!"]</td>
     <td></td>
   </tr>
   <tr>
