NXP-5565: Add removed id used in faceted search styles

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
@@ -1,7 +1,8 @@
 <div xmlns:h="http://java.sun.com/jsf/html"
         xmlns:nxu="http://nuxeo.org/nxweb/util"
         xmlns:c="http://java.sun.com/jstl/core"
-        xmlns:f="http://java.sun.com/jsf/core">
+        xmlns:f="http://java.sun.com/jsf/core"
+        id="facetedSearchSelectorDiv">
 
   <nxu:set var="displaySelector" value="#{facetedSearchActions.contentViewNames.size > 1}">
   <c:if test="${hasSpecificFields}">
