--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -83,7 +83,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value="Go!"]</td>
+    <td>xpath=id('facetedSearchForm')/x:div[1]/x:input</td>
     <td></td>
   </tr>
   <tr>
@@ -107,7 +107,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value="Go!"]</td>
+    <td>xpath=id('facetedSearchForm')/x:div[1]/x:input</td>
     <td></td>
   </tr>
   <tr>
@@ -151,7 +151,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value="Go!"]</td>
+    <td>xpath=id('facetedSearchForm')/x:div[1]/x:input</td>
     <td></td>
   </tr>
   <tr>
@@ -175,7 +175,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value="Go!"]</td>
+    <td>xpath=id('facetedSearchForm')/x:div[1]/x:input</td>
     <td></td>
   </tr>
   <tr>
@@ -207,7 +207,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>//input[@value="Go!"]</td>
+    <td>xpath=id('facetedSearchForm')/x:div[1]/x:input</td>
     <td></td>
   </tr>
   <tr>
