NXP-5559: do not display the faceted searches selector if there is only one contributed faceted search

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_searches_selector_widget_template.xhtml
@@ -5,7 +5,7 @@
         id="facetedSearchSelectorDiv">
 
   <nxu:set var="displaySelector" value="#{facetedSearchActions.contentViewNames.size > 1}">
-  <c:if test="${hasSpecificFields}">
+  <c:if test="${displaySelector}">
 
   <p><h:outputText value="#{messages['label.faceted.searches']}" /></p>
   <h:selectOneMenu
