--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_results.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_results.xhtml
@@ -15,23 +15,35 @@
 
     <div id="content">
 
-      <h:outputLink value="#{facetedSearchActions.searchPermlinkUrl}">
-        <nxu:graphicImage value="/icons/permalink.png"
-          style="vertical-align:middle"
-          alt="#{messages['label.search.permalink']}"
-          title="#{messages['label.search.permalink']}"/>
-      </h:outputLink>
-
       <nxu:set var="contentViewListIndex" value="0">
       <nxu:set var="contentViewName" value="#{facetedSearchActions.currentContentViewName}">
 
         <ui:decorate template="/incl/content_view.xhtml">
+          <ui:define name="content_view_header_before_selector">
+            <c:if test="#{!empty title}">
+              <h1>
+                <h:outputText value="#{messages['title.search.results']}"/>
+                <span>
+                  <h:outputLink value="#{facetedSearchActions.searchPermlinkUrl}">
+                    <nxu:graphicImage value="/icons/permalink.png"
+                      style="vertical-align:middle"
+                      alt="#{messages['label.search.permalink']}"
+                      title="#{messages['label.search.permalink']}"/>
+                  </h:outputLink>
+                </span>    
+              </h1>
+            </c:if>
+          </ui:define>
           <ui:define name="empty_folder_label">
             <h:outputText value="#{messages['label.content.empty.search']}"
               rendered="#{documents.rowCount == 0 and not provider.hasError()}" />
           </ui:define>
-          <ui:define name="content_view_header_after_selector">
-            <ui:include src="/facetedsearch/save_search_form.xhtml"/>
+          <ui:define name="content_view_selector">
+            <ui:include src="/incl/content_view_result_layout_selector.xhtml" />
+            <div class="action_bar">
+              <ui:include src="/facetedsearch/save_search_form.xhtml"/>
+            </div>
+            <div style="clear:both;" />
           </ui:define>
           <ui:define name="syndication_buttons">
             <c:if test="false">syndication currently broken with content views</c:if>
