--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/save_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/save_search_form.xhtml
@@ -1,8 +1,7 @@
 <h:form xmlns:h="http://java.sun.com/jsf/html"
         id="saveFacetedSearchForm">
 
-  <p><h:outputText value="#{messages['label.save.search.description1']}" /></p>
-  <p><h:outputText value="#{messages['label.save.search.description2']}" /></p>
+  <p><h:outputText value="#{messages['label.save.search.description']}" /></p>
   <h:inputText id="savedSearchTitle" value="#{facetedSearchActions.savedSearchTitle}"/>
   <h:commandButton type="submit" class="button"
                    value="#{messages['command.save']}"
