--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_tree_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_tree_widget_template.xhtml
@@ -5,42 +5,69 @@
         xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
         id="#{widget.id}">
 
-  <p>
-      <input type="button" value="Select a value" onclick="jQuery('##{widget.id}_tree').show();"/>
-  </p>
-  <div id="#{widget.id}_tree" style="background-color: grey; display: none; position: absolute; top: 200px; left: 200px;">
-    <span onclick="jQuery('##{widget.id}_tree').hide();">Close</span>
-    <rich:tree id="#{widget.id}_treeId"
-      adviseNodeOpened="#{directoryTreeManager.adviseNodeOpened}"
-      changeExpandListener="#{directoryTreeManager.changeExpandListener}"
-      icon="#{nodeState.isExpanded(rowKey)?'/icons/folder_open.gif':'/icons/folder.gif'}"
-      iconExpanded="/icons/toggle_minus.png"
-      iconCollapsed="/icons/toggle_plus.png"
-      rowKeyVar="rowKey"
-      stateVar="nodeState">
-      <rich:recursiveTreeNodesAdaptor id="#{widget.id}_recursiveTreeNodesAdaptorId"
-        roots="#{directoryTreeManager.get(widget.properties.directoryTreeName).getChildren()}"
-        nodes="#{node.children}"
-        var="node">
-        <rich:treeNode id="#{widget.id}_treeNodeId"
-          highlightedClass="treeNodeHighlightedClass"
-          selectedClass="treeNodeSelectedClass">
-          <div class="#{nxu:test(node.selected, 'selected', '')}" id="#{node.path}">
-            <a4j:commandLink immediate="true" id="#{widget.id}linkId"
-              action="#{facetedSearchActions.addValue(widget, node)}" styleClass="treeLink"
-              reRender="#{widget.id}_list">
-              <h:outputText value="#{messages[node.description]}" />
-            </a4j:commandLink>
-          </div>
-        </rich:treeNode>
-      </rich:recursiveTreeNodesAdaptor>
-    </rich:tree>
-  </div>
+  <div>
+    <h6>
+      <span class="subLabel">
+        <c:choose>
+          <c:when test="#{widget.translated}">
+            <span class="subLabel">
+              <h:outputText value="#{messages[widget.label]}"/>
+            </span>
+          </c:when>
+          <c:otherwise>
+            <span class="subLabel">
+              <h:outputText value="#{widget.label}"/>
+            </span>
+           </c:otherwise>
+         </c:choose>
+      </span>
+      <span class="labelTool" onclick="jQuery('##{widget.id}_tree').show();"><img src="/nuxeo/icons/blue_arrow_tool.png" alt="Pop up" /></span>
+      <div style="clear:both;"></div>
+    </h6>
 
-  <a4j:outputPanel id="#{widget.id}_list" ajaxRendered="true">
-    <nxu:dataList var="directoryValue" value="#{facetedSearchActions.getValuesFor(widget.name)}">
-      <p><h:outputText value="#{directoryValue}" /><a4j:commandLink action="#{facetedSearchActions.removeValue(widget.name, directoryValue)}" reRender="#{widget.id}_list">delete</a4j:commandLink></p>
-    </nxu:dataList>
-  </a4j:outputPanel>
+    <div id="#{widget.id}_tree" class="facetedSearchPopUp">
+      <div class="closePopUpHeader">
+        <span onclick="jQuery('##{widget.id}_tree').hide();">Close</span>
+      </div>
+      <div class="popUpContent">
+        <rich:tree id="#{widget.id}_treeId"
+          adviseNodeOpened="#{directoryTreeManager.adviseNodeOpened}"
+          changeExpandListener="#{directoryTreeManager.changeExpandListener}"
+          icon="#{nodeState.isExpanded(rowKey)?'/icons/folder_open.gif':'/icons/folder.gif'}"
+          iconExpanded="/icons/toggle_minus.png"
+          iconCollapsed="/icons/toggle_plus.png"
+          rowKeyVar="rowKey"
+          stateVar="nodeState">
+          <rich:recursiveTreeNodesAdaptor id="#{widget.id}_recursiveTreeNodesAdaptorId"
+            roots="#{directoryTreeManager.get(widget.properties.directoryTreeName).getChildren()}"
+            nodes="#{node.children}"
+            var="node">
+            <rich:treeNode id="#{widget.id}_treeNodeId"
+              highlightedClass="treeNodeHighlightedClass"
+              selectedClass="treeNodeSelectedClass">
+              <div class="#{nxu:test(node.selected, 'selected', '')}" id="#{node.path}">
+                <a4j:commandLink immediate="true" id="#{widget.id}linkId"
+                  action="#{facetedSearchActions.addValue(widget, node)}" styleClass="treeLink"
+                  reRender="#{widget.id}_list">
+                  <h:outputText value="#{messages[node.description]}" />
+                </a4j:commandLink>
+              </div>
+            </rich:treeNode>
+          </rich:recursiveTreeNodesAdaptor>
+        </rich:tree>
+      </div>
+    </div>
+  
+    <a4j:outputPanel id="#{widget.id}_list" ajaxRendered="true">
+      <table class="dataInput thin">
+        <nxu:dataList var="directoryValue" value="#{facetedSearchActions.getValuesFor(widget.name)}">
+          <tr>
+            <td><p><h:outputText value="#{directoryValue}" /></p></td>
+            <td><a4j:commandLink action="#{facetedSearchActions.removeValue(widget.name, directoryValue)}" reRender="#{widget.id}_list"><img src="/nuxeo/icons/action_delete_mini.gif" alt="Delete" /></a4j:commandLink></td>
+          </tr>
+        </nxu:dataList>
+      </table>
+    </a4j:outputPanel>
+  </div>
 
 </div>
