NXP-5574: faceted search pop up, add title

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_tree_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_tree_widget_template.xhtml
@@ -27,7 +27,9 @@
 
     <div id="#{widget.id}_tree" class="facetedSearchPopUp">
       <div class="closePopUpHeader">
-        <span onclick="jQuery('##{widget.id}_tree').hide();">Close</span>
+        <span class="popUpTitle"><h:outputText value="#{messages['label.search.popup.title']}" /></span>
+        <span class="closePopUp" onclick="jQuery('##{widget.id}_tree').hide();">Close</span>
+        <div style="clear:both;"></div>
       </div>
       <div class="popUpContent">
         <rich:tree id="#{widget.id}_treeId"
