Fix selenium tests

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
@@ -14,7 +14,7 @@
              cache="true">
       <c:if test="#{contentView != null}">
 
-        <nxl:layout name="#{contentView.searchLayout.name}" mode="faceted_search"
+        <nxl:layout name="#{contentView.searchLayout.name}" mode="search"
                     value="#{contentView.searchDocumentModel}"/>
       </c:if>
     </nxu:set>
