--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -75,11 +75,6 @@
     <td></td>
   </tr>
   <tr>
-    <td>verifyTextPresent</td>
-    <td>To start the search</td>
-    <td></td>
-  </tr>
-  <tr>
     <td>watchA4jRequests</td>
     <td></td>
     <td></td>
@@ -105,7 +100,7 @@
   </tr>
   <tr>
     <td>clickAndWait</td>
-    <td>xpath=id('facetedSearchForm')/x:div[1]/x:input</td>
+    <td>//input[@value="Go »"]</td>
     <td></td>
   </tr>
   <tr>
