--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -78,7 +78,7 @@
 </tr>
 <tr>
   <td>clickAndWait</td>
-  <td>xpath=id('facetedSearchForm')/x:div[1]/x:input</td>
+  <td>//input[@value="Go »"]</td>
   <td></td>
 </tr>
 <tr>
