NXP-5589: add nuxeo-platform-faceted-search-api module. Move DM related stuff to nuxeo-platform-faceted-search-dm

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_results.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_results.xhtml
@@ -24,13 +24,13 @@
               <h1>
                 <h:outputText value="#{messages['title.search.results']}"/>
                 <span>
-                  <h:outputLink value="#{facetedSearchActions.searchPermlinkUrl}">
+                  <h:outputLink value="#{facetedSearchActions.permanentLinkUrl}">
                     <nxu:graphicImage value="/icons/permalink.png"
                       style="vertical-align:middle"
                       alt="#{messages['label.search.permalink']}"
                       title="#{messages['label.search.permalink']}"/>
                   </h:outputLink>
-                </span>    
+                </span>
               </h1>
             </c:if>
           </ui:define>
