--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/saved_faceted_searches_selector_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/saved_faceted_searches_selector_widget_template.xhtml
@@ -13,6 +13,6 @@
 
   <div style="display: none;">
     <h:commandButton value="submit"
-                     action="#{facetedSearchActions.loadSavedSearch}"/>
+                     action="#{facetedSearchActions.loadSelectedSavedSearch(widget.properties.outcome)}"/>
   </div>
 </div>
